tests/baselines/reference/declFileWithExtendsClauseThatHasItsContainerNameConflict(strict=true).errors.txt
declFileWithExtendsClauseThatHasItsContainerNameConflict.ts(8,9): error TS2564: Property 'id' has no initializer and is not definitely assigned in the constructor.
declFileWithExtendsClauseThatHasItsContainerNameConflict.ts(15,9): error TS2564: Property 'name' has no initializer and is not definitely assigned in the constructor.


==== declFileWithExtendsClauseThatHasItsContainerNameConflict.ts (2 errors) ====
    declare module A.B.C {
        class B {
        }
    }
    
    module A.B {
        export class EventManager {
            id: number;
            ~~
!!! error TS2564: Property 'id' has no initializer and is not definitely assigned in the constructor.
    
        }
    }
    
    module A.B.C {
        export class ContextMenu extends EventManager {
            name: string;
            ~~~~
!!! error TS2564: Property 'name' has no initializer and is not definitely assigned in the constructor.
        }
    }